--- a/css/ipad.css
+++ b/css/ipad.css
@@ -11,10 +11,10 @@
   }
 
 
-    /* custon javascript  */
-  #navigation-bar {
-    opacity:0;
+  .resize {
+    width:100%;
   }
+
 
   #navigation-bar .container {
     padding-left:0px;
@@ -41,6 +41,9 @@
       padding:3px 15px 0px 3px;
 
     }
+
+
+    
 
     .no-padding {
       padding:0px;
@@ -100,17 +103,22 @@
   /* font sizes */
 
   #hp1 {
-    font-size: 1.5rem;
+    font-size: 1.500em;
     font-style: normal;
     font-weight: 500;
     line-height: 29px;
 
   }
 
+  #scroll-bar h1 {
+    padding-top:6%;
+
+  }
+
   #hp2 {
     font-style: normal;
     font-weight: 500;
-    font-size: 3.000rem;
+    font-size: 2em;
     line-height: 62px;
   }
 
@@ -119,14 +127,14 @@
   #hp3 {
     font-style: normal;
     font-weight: normal;
-    font-size: 0.76rem;
+    font-size: 1.000em;
     line-height: 19px;
   }
 
   #hp4 {
     font-style: normal;
     font-weight: 500;
-    font-size: 0.76rem;
+    font-size: 1em;
     line-height: 21px;
   }
 
@@ -140,7 +148,7 @@
   #hp6 {
     font-style: normal;
     font-weight: bold;
-    font-size: 0.66rem;
+    font-size: 0.750em;
     line-height: 18px;
   }
   /* view work */
@@ -149,8 +157,8 @@
   }
 
   #arrow {
-      width:16px;
-     height:16px;
+    width:16px;
+
      padding-top:2%;
 
   }
@@ -174,7 +182,7 @@
   .skill-1 h6 {
     font-style: normal;
     font-weight: normal;
-    font-size: 0.476rem;
+    font-size: 0.625em;
     line-height: 12px;
   }
   .skill-2 {
@@ -190,7 +198,7 @@
   .skill-2 h6 {
     font-style: normal;
     font-weight: normal;
-    font-size: 0.476rem;
+    font-size: 0.625em;
     line-height: 12px;
   }
 
@@ -222,7 +230,7 @@
 
   /* embellishments */
   .rectangle {
-    width:120px;
+    width:200px;
     height:6px;
     left:4px;
     top:138px;
@@ -303,7 +311,7 @@
      font-family: Lato;
      font-style: normal;
      font-weight: 500;
-     font-size: 0.5714285714285714rem;
+    font-size: 0.750em;
      line-height: 14px;
    }
 
@@ -311,7 +319,7 @@
      font-family: IBM Plex Sans;
      font-style: normal;
      font-weight: 600;
-     font-size: 1.5238095238095237rem;
+     font-size: 2.000em;
      line-height: 42px;
    }
 
@@ -319,7 +327,7 @@
      font-family: Lato;
      font-style: normal;
      font-weight: normal;
-     font-size: 0.47619047619047616rem;
+     font-size: 0.625em;
      line-height: 12px;
    }
 
@@ -327,7 +335,7 @@
      font-family: Lato;
      font-style: normal;
      font-weight: normal;
-     font-size: 0.7619047619047619rem;
+    font-size: 1.000em;
      line-height: 19px;
    }
 
@@ -342,7 +350,7 @@
    .title {
      font-style: normal;
      font-weight: 600;
-     font-size: 1rem;
+     font-size: 1.500em;
      line-height: 31px;
 
    }
@@ -351,7 +359,7 @@
      font-family: Lato;
      font-style: normal;
      font-weight: normal;
-     font-size: 0.6666666666666666rem;
+     font-size: 1.000em;
      line-height: 26px;
    }
 
