--- a/css/mobile.css
+++ b/css/mobile.css
@@ -12,10 +12,10 @@
   }
 
 
-    /* custon javascript  */
-  #navigation-bar {
-    opacity:0;
+  .resize {
+    width:100%;
   }
+
 
 
   /* scroll  */
@@ -130,7 +130,7 @@
   /* font sizes */
 
   #hp1 {
-    font-size: 1rem;
+    font-size: 1.5em;
     font-style: normal;
     font-weight: 500;
     line-height: 29px;
@@ -139,21 +139,21 @@
   #hp2 {
     font-style: normal;
     font-weight: 500;
-    font-size: 2rem;
+    font-size: 3em;
     line-height: 62px;
   }
 
   #hp3 {
     font-style: normal;
     font-weight: normal;
-    font-size: 0.76rem;
+    font-size: 1em;
     line-height: 19px;
   }
 
   #hp4 {
     font-style: normal;
     font-weight: 500;
-    font-size: 0.76rem;
+    font-size: 1em;
     line-height: 21px;
   }
 
@@ -167,7 +167,7 @@
   #hp6 {
     font-style: normal;
     font-weight: bold;
-    font-size: 0.66rem;
+    font-size: 0.750em;
     line-height: 18px;
   }
   /* view work */
@@ -177,7 +177,6 @@
 
   #arrow {
       width:16px;
-     height:16px;
      padding-top:2%;
 
   }
@@ -201,7 +200,7 @@
   .skill-1 h6 {
     font-style: normal;
     font-weight: normal;
-    font-size: 0.476rem;
+    font-size: 0.625em;
     line-height: 12px;
   }
   .skill-2 {
@@ -217,7 +216,7 @@
   .skill-2 h6 {
     font-style: normal;
     font-weight: normal;
-    font-size: 0.476rem;
+    font-size: 0.625em;
     line-height: 12px;
   }
   /* column 2 */
@@ -265,7 +264,7 @@
 
   /* embellishments */
   .rectangle {
-    width:120px;
+    width:200px;
     height:6px;
     left:4px;
     top:138px;
@@ -345,7 +344,7 @@
     font-family: Lato;
     font-style: normal;
     font-weight: 500;
-    font-size: 0.5714285714285714rem;
+    font-size: 0.750em;
     line-height: 14px;
   }
 
@@ -353,7 +352,7 @@
     font-family: IBM Plex Sans;
     font-style: normal;
     font-weight: 600;
-    font-size: 1.5238095238095237rem;
+    font-size: 2em;
     line-height: 42px;
   }
 
@@ -361,7 +360,7 @@
     font-family: Lato;
     font-style: normal;
     font-weight: normal;
-    font-size: 0.47619047619047616rem;
+    font-size: 0.625em;
     line-height: 12px;
   }
 
@@ -369,8 +368,9 @@
     font-family: Lato;
     font-style: normal;
     font-weight: normal;
-    font-size: 0.7619047619047619rem;
+    font-size: 1em;
     line-height: 19px;
+    padding-top:5%;
   }
 
   .inner-col-buttons-btns {
@@ -384,7 +384,7 @@
   .title {
     font-style: normal;
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 1.5em;
     line-height: 31px;
 
   }
@@ -397,7 +397,7 @@
     font-family: Lato;
     font-style: normal;
     font-weight: normal;
-    font-size: 0.6666666666666666rem;
+    font-size: 1em;
     line-height: 26px;
   }
 
@@ -417,13 +417,15 @@
 
   }
 
+
+
   #about {
     padding-top:10%;
   }
   #about-title {
     font-style: normal;
     font-weight: 500;
-    font-size: 1rem;
+    font-size: 1em;
     line-height: 29px;
   }
 
@@ -449,6 +451,9 @@
 
   .about-title-txt {
     color:rgb(255,255,1);
+    font-size:1.3em;
   }
+
+
 
 }
